RESOLVED FIXED 258621
IPC::Connection::waitForAndDispatchImmediately() does not return Timeout on timeout
https://bugs.webkit.org/show_bug.cgi?id=258621
Summary IPC::Connection::waitForAndDispatchImmediately() does not return Timeout on t...
Kimmo Kinnunen
Reported 2023-06-28 06:26:45 PDT
IPC::Connection::waitForAndDispatchImmediately() does not return Timeout on timeout
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-28 06:27:04 PDT
Kimmo Kinnunen
Comment 2 2023-06-28 06:30:25 PDT
EWS
Comment 3 2023-06-28 11:43:41 PDT
Committed 265590@main (08402919e387): <https://commits.webkit.org/265590@main> Reviewed commits have been landed. Closing PR #15371 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.