IPC::Connection::waitForAndDispatchImmediately() does not return Timeout on timeout https://bugs.webkit.org/show_bug.cgi?id=258621 rdar://111448503

Reviewed by Simon Fraser.

Return IPC::Error::Timeout on
IPC::Connection::waitForAndDispatchImmediately() timeout.

Fix typo in IPC::Error::SyncMessageInterruptedWait. It was
...Interruped...

Fix incorrect error in hunk
        // Don't even start waiting if we have InterruptWaitingIfSyncMessageArrives and there's a sync message already in the queue.
        ....
            // We don't support having multiple clients waiting for messages.
            ASSERT(!m_waitingForMessage);
The assertion was a red herring and the intention of the error return
was to return early due to sync message being in the queue, not due to
multiple waiters. Multiple waiters are checked before.

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::waitForMessage):
(IPC::errorAsString):
* Source/WebKit/Platform/IPC/Connection.h:
* Tools/TestWebKitAPI/Tests/IPC/ConnectionTests.cpp:
(TestWebKitAPI::TEST_P):

Canonical link: https://commits.webkit.org/265590@main